tests/unit-fail-compilation/j084d.c.ref
j084d.c:2:1: error: Redefinition of symbol: a.
  Constraint violation (CV-TDG13).
   see C11 section 6.9:3 http://rvdoc.org/C11/6.9
   see CERT-C section MSC40-C http://rvdoc.org/CERT-C/MSC40-C
Translation failed (config dumped). Run kcc -d j084d.c to see commands run.
